cmake_minimum_required(VERSION 3.0)

add_library(vednn_intrinsic_convolution_forward_addbias OBJECT
	direct_default.c
	direct_dil1_str1_pad0_ker1.c
	direct_dil1_str1_pad0_ker1_c1024x.c
	direct_dil1_str1_padsame.c
	direct_dil1_str1_padsame_ker3.c
	direct_dil1_str1_padsame_ker3_c1.c
	direct_dil1_str1_padsame_ker3_c1024x.c
	direct_dil1_str1_padsame_ker3_c1_owU128.c
)
